ref(animation system)!: full migration to NO_OP pattern