@@ -4,29 +4,25 @@ import net.minecraft.client.gui.ActiveTextCollector;
 import net.minecraft.util.Util;
 import net.weyne1.easegui.api.animation.EasingType;
 import net.weyne1.easegui.client.animation.AnimationContext;
+import net.weyne1.easegui.client.animation.AnimationMath;
 import net.weyne1.easegui.client.config.ConfigManager;
 import net.weyne1.easegui.client.config.EaseGUIConfig;
 import net.weyne1.easegui.client.state.ScreenStateTracker;
+import org.jetbrains.annotations.Nullable;
 
 public class SplashAnimator {
 
+    @Nullable
     public static ActiveTextCollector.Parameters getAnimatedParameters(ActiveTextCollector.Parameters parameters) {
-        EaseGUIConfig config = ConfigManager.getConfig();
+        float parentAlpha = AnimationContext.getCurrentAlpha();
 
-        if (!config.global.enabled) {
-            return null;
+        if (!isSplashEnabled()) {
+            return parameters.withOpacity(parentAlpha);
         }
 
-        var screenConfig = config.screens.get("title");
-
-        if (screenConfig == null || !screenConfig.enabled || screenConfig.splash == null || !screenConfig.splash.enabled) {
-            return parameters.withOpacity(AnimationContext.getCurrentAlpha());
-        }
-
-        var splashConfig = screenConfig.splash;
+        var splashConfig = ConfigManager.getConfig().screens.get("title").splash;
         long actualStartTime = ScreenStateTracker.getTitleActualStartTime();
         long elapsed = Util.getMillis() - actualStartTime - splashConfig.splashDelay;
-        float parentAlpha = AnimationContext.getCurrentAlpha();
 
         if (elapsed <= 0) {
             return null;
@@ -43,10 +39,19 @@ public class SplashAnimator {
                 : rawProgress;
 
         float alphaProgress = EasingType.EASE_OUT_CUBIC.ease(rawProgress);
-        float finalAlpha = Math.min(1.0f, Math.max(0.0f, alphaProgress * parentAlpha));
+        float finalAlpha = AnimationMath.clamp(alphaProgress * parentAlpha, 0.0f, 1.0f);
 
-        return parameters
-                .withOpacity(finalAlpha)
-                .withScale(spatialProgress);
+        return parameters.withOpacity(finalAlpha).withScale(spatialProgress);
+    }
+
+    private static boolean isSplashEnabled() {
+        EaseGUIConfig config = ConfigManager.getConfig();
+        if (!config.global.enabled) return false;
+
+        var screenConfig = config.screens.get("title");
+        return screenConfig != null
+                && screenConfig.enabled
+                && screenConfig.splash != null
+                && screenConfig.splash.enabled;
     }
 }
